--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.3.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
