--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URL=mongodb+srv://sanuth:arreadersanuth@arbookreader.4tt0ax5.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://pasindu18:ndauni123@arbookreader.4tt0ax5.mongodb.net/?retryWrites=true&w=majority
 SECRET='kdkdkdigkgkglslsdiewoudmc9595'
