--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=4000
 MONGO_URL= mongodb+srv://venukshim:ebooks@arbookreader.4tt0ax5.mongodb.net/?retryWrites=true&w=majority
 SECRET='kdkdkdigkgkglslsdiewoudmc9595'
+
+PAYPAL_CLIENT_ID = AQ6UngTzAsKoTY2MJgQXKNN8IlBXa-E3i7NxRp2LZxVlylz-nkr0YouK5oFfo2A1S0qJTJdWDBf2Vinf
+
+PAYPAL_CLIENT_SECRET = EB1uDEP7CQNPf0O3wp18_WbRQPXBp6KAp0uBf2GBcbPAijqT_eH96NZpuiMQppA_uj0OK5zwmj8GgRnw
