--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -23,6 +24,8 @@
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "paypal-rest-sdk": "^1.8.1",
+    "stripe": "^13.10.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
