--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /uploads
 
 # dependencies
-/node_modules
+node_modules
 
 # testing
 /coverage
@@ -21,3 +21,4 @@ yarn-debug.log*
 yarn-error.log*
 
 .env.secret
+.env.MONGO_URL
